--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -7,12 +7,25 @@
     android:orientation="vertical"
     android:padding="@dimen/_10sdp"
     tools:context=".Activitys.ProductDetailsActivity">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_250sdp" />
-
+    <LinearLayout
+        android:id="@+id/dotsIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignBottom="@+id/viewPager"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/_4sdp"
+        android:layout_gravity="center" />
+</RelativeLayout>
     <TextView
         android:id="@+id/productTitle"
         android:layout_width="wrap_content"
