--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -6,9 +6,14 @@
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/titleEditText"
+        android:id="@+id/edit_text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Product Title" />
+        android:hint="Title" />
 
+    <Button
+        android:id="@+id/btn_add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add" />
 </LinearLayout>
