--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -15,5 +15,6 @@
         android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/btn_shape"
         android:text="Add" />
 </LinearLayout>
