--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,13 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/_10sdp"
+        android:layout_gravity="center"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_100sdp"
+            android:layout_gravity="center"
+            android:src="@drawable/loginimg"/>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_username"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
             android:layout_marginBottom="@dimen/_5sdp"
+            app:boxStrokeColor="@color/dark"
             android:hint="Username">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_username"
@@ -30,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
             android:layout_marginBottom="@dimen/_5sdp"
+            app:boxStrokeColor="@color/dark"
             android:hint="Password">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_Passwod"
@@ -41,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
+            app:backgroundTint="@color/dark"
             android:background="@drawable/btn_shape"/>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
