--- a/app/src/main/res/drawable/active_dot.xml
+++ b/app/src/main/res/drawable/active_dot.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FD2C2C"/>
+    <solid android:color="@color/dark"/>
     <size android:width="8dp" android:height="8dp"/>
 </shape>
