--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/cardBG"
     android:padding="@dimen/_10sdp"
     tools:context=".Activitys.ProductDetailsActivity">
 
@@ -12,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,7 +22,8 @@
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/back" />
+                android:src="@drawable/back"
+                android:backgroundTint="@color/dark"/>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager"
@@ -60,7 +61,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
-            android:background="#E6E6E6" />
+            android:background="#D6D6D6" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,14 +77,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="@dimen/_12sdp" />
-
             <TextView
-                android:id="@+id/productPrice"
+                android:id="@+id/productStock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="#FD2C2C"
-                android:textSize="@dimen/_16sdp" />
+                android:textSize="@dimen/_12sdp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -102,11 +102,12 @@
                 android:textSize="@dimen/_12sdp" />
 
             <TextView
-                android:id="@+id/productStock"
+                android:id="@+id/productPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="@dimen/_12sdp" />
+                android:textColor="@color/dark"
+                android:textSize="@dimen/_16sdp" />
         </LinearLayout>
 
         <View
@@ -114,7 +115,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
-            android:background="#E6E6E6" />
+            android:background="#D6D6D6" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -158,6 +159,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="@dimen/_2sdp"
                 android:background="@drawable/btn_shape"
+                app:backgroundTint="@color/dark"
                 android:text="Add" />
             <Button
                 android:id="@+id/btn_delete"
@@ -166,6 +168,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="@dimen/_2sdp"
                 android:background="@drawable/btn_shape"
+                app:backgroundTint="@color/dark"
                 android:text="Delete" />
         </LinearLayout>
 
