--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -52,7 +52,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginBottom="@dimen/_4sdp"
-        android:background="#E6E6E6"/>
+        android:background="#D6D6D6"/>
 
 
 
