--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark">#FF001761</color>
     <color name="light">#FF00BDE2</color>
+    <color name="cardBG">#E9EBEF</color>
 
 </resources>
